type shii
