# models/models.js
@@ -3,10 +3,12 @@ module.exports = {
   notifHistory: require("./schema/notifHistory"),
   competition: require("./schema/competition"),
   participant: require("./schema/participant"),
+  information: require("./schema/information"),
   notifToken: require("./schema/notifToken"),
   category: require("./schema/category"),
   clubLog: require("./schema/clubLog"),
   invoice: require("./schema/invoice"),
+  sponsor: require("./schema/sponsor"),
   ranking: require("./schema/rank"),
   admin: require("./schema/admin"),
   match: require("./schema/match"),
