# routes/subRoutes/sponsorInfo.js
@@ -1,0 +1,11 @@
+const express = require("express");
+const router = express.Router();
+const { getInformation } = require("../../controller/information");
+const { getSponsors } = require("../../controller/sponsor");
+const { body, query } = require("express-validator");
+const requestDataValidation = require("../../middleware/requestDataValidation");
+
+router.route("/info").get(requestDataValidation, getInformation);
+router.route("/sponsors").get(requestDataValidation, getSponsors);
+
+module.exports = router;
